--- a/src/menu.css
+++ b/src/menu.css
@@ -30,13 +30,7 @@ h3 {
     margin-bottom: 160px;
 }
 
-.offer > .items > .item > span {
-    font-family: Zamenhof;
-    font-size: 24px;
-    position: relative;
-    background-color: white;
-    padding: 5px;
-}
+
 
 .offer > .items {
     display: flex;
@@ -51,9 +45,18 @@ h3 {
     z-index: -1;
 }
 
+.offer > .items > .item > span {
+    font-family: Zamenhof;
+    font-size: 24px;
+    position: relative;
+    background-color: white;
+    padding: 5px;
+}
+
 .item-name {
     float: left;
 }
+
 .item-price {
     float: right;
 }
@@ -106,6 +109,11 @@ input {
     margin: 0 auto;
     border: 0;
     border-radius: 50px;
+    cursor: pointer;
+}
+
+.submit-button:hover {
+    opacity: 0.7;
 }
 
 .button-container {
